# Goquant

./: .gitignore  FILE_INDEX.md  IMPLEMENTATION_GUIDE.md  QUICK_START.md  README.md  complete-README.md  script.py
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py  schemas.py
backend/app/routers/: auth.py  bugs.py  products.py
frontend/: next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
frontend/.next/: trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/client-development-fallback/: index.pack.gz.old
frontend/.next/cache/webpack/client-production/: index.pack
frontend/.next/cache/webpack/edge-server-production/: index.pack
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-production/: index.pack
frontend/.next/server/: server-reference-manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/automation-suite/: page.tsx
frontend/src/app/bug-reports/: page.tsx
frontend/src/app/manual-tests/: page.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  table.tsx
frontend/tests/pages/: BasePage.ts  CartPage.ts  LoginPage.ts  ProductPage.ts
frontend/tests/specs/: auth.spec.ts  cart-checkout.spec.ts  form-validation.spec.ts  products.spec.ts  smoke-mobile.spec.ts
